unpackaged/main/default/objects/Proprietary_Master_Group__c/Proprietary_Master_Group__c.object-meta.xml
<CustomObject>
    <label>Proprietary Master Group</label>
    <nameField>
        <label>Proprietary Master Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proprietary Master Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>