unpackaged/main/default/objects/Proprietary_Master_Group__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Proprietary Master Groups</relationshipLabel>
    <relationshipName>Proprietary_Master_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>