unpackaged/main/default/objects/Proprietary_Master_Group__c/fields/Composite_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Composite_Run_Date__c</fullName>
    <label>Composite Run Date</label>
    <length>2</length>
    <type>Text</type>
</CustomField>