unpackaged/main/default/objects/Proprietary_Master_Group__c/fields/Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Group_Number__c</fullName>
    <label>Group Number</label>
    <length>4</length>
    <type>Text</type>
</CustomField>