unpackaged/main/default/objects/Proprietary_Master_Group__c/fields/Group_Owner__c.field-meta.xml
<CustomField>
    <fullName>Group_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>NCM Associates</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Proprietary Master Groups (Group Owner)</relationshipLabel>
    <relationshipName>Proprietary_Master_Groups1</relationshipName>
    <type>Lookup</type>
</CustomField>