unpackaged/main/default/objects/Proprietary_Master_Group__c/fields/Mandatory_Composite_Run__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_Composite_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mandatory Composite Run</label>
    <type>Checkbox</type>
</CustomField>