unpackaged/main/default/objects/Proprietary_Master_Group__c/fields/Meetings_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>Meetings_Per_Year__c</fullName>
    <label>Meetings Per Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>