unpackaged/main/default/objects/Proprietary_Master_Group__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Proprietary Master Groups</relationshipLabel>
    <relationshipName>Proprietary_Master_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>