unpackaged/main/default/objects/Proprietary_Master_Group__c/fields/Proprietary_Group_Master_ID__c.field-meta.xml
<CustomField>
    <fullName>Proprietary_Group_Master_ID__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proprietary Group Master (ID)</label>
    <type>Text</type>
</CustomField>