unpackaged/main/default/objects/Proprietary_Master_Group__c/fields/Proprietary_Master_Group_Id_18__c.field-meta.xml
<CustomField>
    <fullName>Proprietary_Master_Group_Id_18__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <label>Proprietary Master Group Id (18)</label>
    <type>Text</type>
</CustomField>