unpackaged/main/default/objects/Proprietary_Master_Group__c/fields/Support_Staff__c.field-meta.xml
<CustomField>
    <fullName>Support_Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support Staff</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>NCM Associates</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Proprietary Master Groups (Support Staff)</relationshipLabel>
    <relationshipName>Proprietary_Master_Groups2</relationshipName>
    <type>Lookup</type>
</CustomField>