unpackaged/main/default/objects/Proprietary_Master_Group__c/fields/Support_Staff_Manager__c.field-meta.xml
<CustomField>
    <fullName>Support_Staff_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support Staff Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Proprietary Master Groups (Support Staff Manager)</relationshipLabel>
    <relationshipName>Proprietary_Master_Groups3</relationshipName>
    <type>Lookup</type>
</CustomField>