unpackaged/main/default/objects/Proprietary_Master_Group__c/recordTypes/Proprietary_Master_Group.recordType-meta.xml
<RecordType>
    <fullName>Proprietary_Master_Group</fullName>
    <active>true</active>
    <label>Proprietary Master Group</label>
</RecordType>